# PRG2

./: CMakeLists.txt  README.md  Teste.c  Teste.h  bibli.c  bibli.h  main.c
Biblioteca_PRG2/: CMakeLists.txt
Biblioteca_PRG2/Diretorios/: CMakeLists.txt
Biblioteca_PRG2/Diretorios/c/: Arvore.c  ContingSort.c  Fila.c  ListaE.c  ListaL.c  Pilha.c  Tabela.c
Biblioteca_PRG2/Diretorios/h/: Arvore.h  ContingSort.h  Fila.h  ListaL.h  Pilha.h  Tabela.h
